# qt.image-absorber

./: CMakeLists.txt  Makefile  README.md
cmake/: SparkAppimageConfig.cmake  SparkDesktopMacros.cmake  SparkEnvConfig.cmake  SparkMacrosConfig.cmake  SparkMacrosExtendConfig.cmake  SparkTranslatorConfig.cmake  package-deb.descript  spark-deb-package.descript
src/: clipboardimagesavework.cpp  clipboardimagesavework.h  clipboardmanager.cpp  clipboardmanager.h  global.cpp  global.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
